2011-05-24  Syed Idris Shah  <syed.idris-shah@nokia.com>

Reviewed by Andreas Kling.

        [Qt] fast/canvas/webgl/gl-uniform-arrays.html failing for Qt on Linux
        https://bugs.webkit.org/show_bug.cgi?id=60377

        LayoutTests/fast/canvas/webgl/gl-uniform-arrays.html

        We do not need assert for the useProgram as program can be null.

        * platform/graphics/qt/GraphicsContext3DQt.cpp:
        (WebCore::GraphicsContext3D::useProgram): Program can be null. Removing assert.

Canonical link: https://commits.webkit.org/76782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87208 268f45cc-cd09-0410-ab3c-d52691b4dbfc